--- a/assets/pages/pastEvents.html
+++ b/assets/pages/pastEvents.html
@@ -112,7 +112,7 @@
 
 
         <!-- Cards -->
-        <section class="cards">
+        <div class="cards">
             <div id="cardMain" class="card-group p-3 row  row-cols-md-4 g-3 mb-4  justify-content-center">
 
                 <!-- Template Card -->
@@ -135,7 +135,7 @@
 
 
             </div>
-        </section>
+        </div>
 
 
 
