--- a/index.html
+++ b/index.html
@@ -127,8 +127,7 @@
 
         <!-- Cards -->
         <div class="cards">
-            <div id="cardMain" class="card-group p-3 row row-cols-md-4
-                 g-3 mb-4  justify-content-center">
+            <div id="cardMain" class="card-group p-3 row row-cols-md-4 g-3 mb-4  justify-content-center">
 
                 <!-- Template Card -->
                 <template id="card-tpl">
