--- a/assets/pages/details.html
+++ b/assets/pages/details.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <!-- Navigatiob Bar -->
+        <!-- Navigation Bar -->
         <nav class="navbar navbar-expand-lg  bg-dark.bg-gradient">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
