--- a/index.html
+++ b/index.html
@@ -74,42 +74,23 @@
 
     <main>
 
+
         <!-- Selection bar -->
         <div class="container bgHome">
             <div class="row d-flex">
                 <div class="check  col m-3 pt-1 justify-content-between">
 
-                    <!-- Template category 
+                    <!-- Template checkgroup category-->
                     <template id="tplcat">
-                        <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="checkbox" id="" value="">
-                            <label class="form-check-label" for="">Category</label>
+                        <div class="form-check form-check-inline ">
+                            <input class="form-check-input" type="checkbox">
+                            <label class="form-check-label" for=""></label>
                         </div>
-                    </template>-->
+                    </template>
 
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-                        <label class="form-check-label" for="inlineCheckbox1">Category</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-                        <label class="form-check-label" for="inlineCheckbox2">Category</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
-                        <label class="form-check-label" for="inlineCheckbox3">Category</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="inlineCheckbox4" value="option4">
-                        <label class="form-check-label" for="inlineCheckbox4">Category</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="inlineCheckbox5" value="option5">
-                        <label class="form-check-label" for="inlineCheckbox5">Category</label>
-                    </div>
 
                 </div>
-                <form class="g-2 col-sm col-md-5  justify-content-end">
+                <form class="g-2  col-3  justify-content-end">
                     <div class="input-group  mt-1 mb-3">
                         <input type="text" class="form-control" placeholder="" aria-label="Recipient's username"
                             aria-describedby="button-addon2">
@@ -131,7 +112,7 @@
 
                 <!-- Template Card -->
                 <template id="card-tpl">
-                    <div class="col-12 col-md-4 col-lg-3">
+                    <div class="cardmodel col-12 col-md-4 col-lg-3">
                         <div class="card h-100 m-1 rounded-3 bg-custom-1 border-dark">
                             <img src="${image}" class="card-img-top rounded" alt="">
                             <div class="card-body">
