--- a/assets/pages/details.html
+++ b/assets/pages/details.html
@@ -61,24 +61,31 @@
         <div class="detailcard row g-0  p-3 d-flex justify-content-center">
             <div class="col-md-4 col-sm p-2 border mt-5 mb-5 rounded bg-secondary ">
                 <div class="cardDetail h-100">
-                    <div class="card-body  p-2">
-                        <img src="../img/Food_Fair.jpg" id="bigcard" class="cardDetail-img rounded align-item-center" alt="...">
+                    <div class="card-body  p-3">
+                        <img src="" id="bigcard" class="cardDetail-img rounded align-item-center" alt="...">
                     </div>
                 </div>
             </div>
             <div class="col-md-4 col-sm p-2 border border-start-0 mt-5 mb-5 rounded bg-secondary">
                 <div class="cardDetail h-100">
-                    <div class="card-body p-4 m-3">
-                        <h3 class="card-title text-center mb-3">Food Tour</h3>
+                    <div class="card-body p-1 m-3">
+                        <h3 class="card-title text-center mb-3 ">Food Tour</h3>
                         <ul id="detail-li">
-                            <li>Name</li>
+
+                            <template id="tpl-li">
+                                <li class="dtl-li p-1">
+
+                                </li>
+                            </template>
+
+                            <!-- <li>Name</li>
                             <li>Date</li>
                             <li>Description</li>
                             <li>Category</li>
                             <li>Place</li>
                             <li>Capacity</li>
                             <li>Assistance or estimate</li>
-                            <li>Price</li>
+                            <li>Price</li> -->
                         </ul>
 
                     </div>
@@ -115,8 +122,8 @@
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
 
-        <script type="module" src="../scripts/amazing.js"></script>
-        <script type="module" src="../scripts/details.js"></script>
+    <script type="module" src="../scripts/amazing.js"></script>
+    <script type="module" src="../scripts/details.js"></script>
 
 </body>
 
