--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                             </div>
                             <div class="card-footer d-flex justify-content-between">
                                 <p class="card-price align-self-center">${price}</p>
-                                <a href="./assets/pages/details.html" class="btn btn-dark">See Info</a>
+                                <a href="./assets/pages/details.html?id="${_id} class="btn btndetail btn-dark">See Info</a>
                             </div>
                         </div>
                     </div>
