--- a/assets/pages/details.html
+++ b/assets/pages/details.html
@@ -59,9 +59,9 @@
 
         <!-- Cards -->
         <div class="detailcard row g-0  p-3 d-flex justify-content-center">
-            <div class="col-md-4 col-sm p-2 border mt-5 mb-5 rounded bg-secondary ">
+            <div class="col-md-5 col-sm p-2 border mt-5 mb-5 rounded bg-secondary ">
                 <div class="cardDetail h-100">
-                    <div class="card-body  p-3">
+                    <div class="card-body  p-2">
                         <img src="" id="bigcard" class="cardDetail-img rounded align-item-center" alt="...">
                     </div>
                 </div>
@@ -69,11 +69,11 @@
             <div class="col-md-4 col-sm p-2 border border-start-0 mt-5 mb-5 rounded bg-secondary">
                 <div class="cardDetail h-100">
                     <div class="card-body p-1 m-3">
-                        <h3 class="card-title text-center mb-3 ">Food Tour</h3>
+                        <h3 class="card-title fw-bold text-center mb-3 ">Food Tour</h3>
                         <ul id="detail-li">
 
                             <template id="tpl-li">
-                                <li class="dtl-li p-1">
+                                <li class="dtl-li p-1 text-capitalize">
 
                                 </li>
                             </template>
