--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
                         <button class="btn btn-outline-secondary" type="button" id="button-addon2">
                             <i class="bi bi-search"></i>
                         </button>
+
                     </div>
                 </form>
 
@@ -121,7 +122,8 @@
                             </div>
                             <div class="card-footer d-flex justify-content-between">
                                 <p class="card-price align-self-center">${price}</p>
-                                <a href="./assets/pages/details.html?id="${_id} class="btn btndetail btn-dark">See Info</a>
+                                <a href="./assets/pages/details.html?id=" ${_id} class="btn btndetail btn-dark">See
+                                    Info</a>
                             </div>
                         </div>
                     </div>
