--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
                                 <p class="card-text"></p>
                             </div>
                             <div class="card-footer d-flex justify-content-between">
-                                <p class="card-price align-self-center">${price}</p>
-                                <a href="./assets/pages/details.html?id=" ${_id} class="btn btndetail btn-dark">See
+                                <p class="card-price align-self-center"></p>
+                                <a href="./assets/pages/details.html?id=" class="btn btndetail btn-dark">See
                                     Info</a>
                             </div>
                         </div>
@@ -160,6 +160,8 @@
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
 
+
+    <script type="module" src="./assets/scripts/functions.js"></script>
     <script type="module" src="./assets/scripts/amazing.js"></script>
     <script type="module" src="./assets/scripts/index.js"></script>
 </body>
