--- a/assets/pages/stats.html
+++ b/assets/pages/stats.html
@@ -33,7 +33,7 @@
                             <a href="/index.html" class="btn btn-secondary" aria-current="page">Home</a>
                         </li>
                         <li class="nav-item p-2">
-                            <a class="btn btn-secondary active" href="#">Upcoming Events</a>
+                            <a class="btn btn-secondary" href="./upcomingEvents.html">Upcoming Events</a>
                         </li>
                         <li class="nav-item p-2">
                             <a class="btn btn-secondary" href="./pastEvents.html">Past Events</a>
@@ -42,7 +42,7 @@
                             <a class="btn btn-secondary" href="./contact.html">Contact</a>
                         </li>
                         <li class="nav-item p-2">
-                            <a class="btn btn-secondary" href="./stats.html">Stats</a>
+                            <a class="btn btn-secondary active" href="#">Stats</a>
                         </li>
                     </ul>
                 </div>
