--- a/assets/pages/details.html
+++ b/assets/pages/details.html
@@ -60,9 +60,9 @@
         <!-- Cards -->
         <div class="detailcard row g-0  p-3 d-flex justify-content-center">
             <div class="col-md-5 col-sm p-2 border mt-5 mb-5 rounded bg-secondary ">
-                <div class="cardDetail h-100">
-                    <div class="card-body  p-2">
-                        <img src="../img/Cinema.jpg" id="bigcard" class="cardDetail-img rounded align-item-center"
+                <div class="cardDetail h-100 d-flex">
+                    <div class="card-body  p-2  ">
+                        <img src="" id="bigcard" class="cardDetail-img rounded align-item-center"
                             alt="...">
                     </div>
                 </div>
@@ -123,6 +123,7 @@
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
 
+    <script type="module" src="../scripts/functions.js"></script>
     <script type="module" src="../scripts/amazing.js"></script>
     <script type="module" src="../scripts/details.js"></script>
 
