--- a/assets/pages/details.html
+++ b/assets/pages/details.html
@@ -62,8 +62,7 @@
             <div class="col-md-5 col-sm p-2 border mt-5 mb-5 rounded bg-secondary ">
                 <div class="cardDetail h-100 d-flex">
                     <div class="card-body  p-2  ">
-                        <img src="" id="bigcard" class="cardDetail-img rounded align-item-center"
-                            alt="...">
+                        <img src="" id="bigcard" class="cardDetail-img rounded align-item-center" alt="...">
                     </div>
                 </div>
             </div>
@@ -79,14 +78,7 @@
                                 </li>
                             </template>
 
-                            <!-- <li>Name</li>
-                            <li>Date</li>
-                            <li>Description</li>
-                            <li>Category</li>
-                            <li>Place</li>
-                            <li>Capacity</li>
-                            <li>Assistance or estimate</li>
-                            <li>Price</li> -->
+
                         </ul>
 
                     </div>
@@ -124,7 +116,6 @@
         crossorigin="anonymous"></script>
 
     <script type="module" src="../scripts/functions.js"></script>
-    <script type="module" src="../scripts/amazing.js"></script>
     <script type="module" src="../scripts/details.js"></script>
 
 </body>
