--- a/assets/pages/stats.html
+++ b/assets/pages/stats.html
@@ -85,7 +85,7 @@
                     </tbody>
                 </table>
 
-                <table class="table table-bordered mb-0 col-10  caption-top">
+                <table class="table table-hover table-bordered mb-0 col-10  caption-top">
                     <caption>Upcoming events Statistic by category</caption>
                     <thead>
                         <tr>
@@ -100,7 +100,7 @@
                     </tbody>
                 </table>
 
-                <table class="table table-bordered  mb-3 col-10 caption-top">
+                <table class="table table-hover table-bordered  mb-3 col-10 caption-top">
 
                     <caption>Events Statistic</caption>
                     <thead>
