--- a/assets/pages/details.html
+++ b/assets/pages/details.html
@@ -62,7 +62,7 @@
             <div class="col-md-5 col-sm p-2 border mt-5 mb-5 rounded bg-secondary ">
                 <div class="cardDetail h-100 d-flex">
                     <div class="card-body  p-2  ">
-                        <img src="" id="bigcard" class="cardDetail-img rounded align-item-center" alt="...">
+                        <img src="/" id="bigcard" class="cardDetail-img rounded align-item-center" alt="...">
                     </div>
                 </div>
             </div>
